# WavePDF

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
helper/: run.sh  setup.sh
src/: main.cpp
src/utility/: Buffer.cpp  Buffer.h  PdfReader.cpp  PdfReader.h
src/utility/objects/: ArrayObject.h  BaseObject.h  BooleanObject.h  DictionaryObject.h  NameManager.h  NameObject.h
tests/: test_pdfreader.cpp
